# Poetry

Prueba/: pyproject.toml
Prueba/Archivos/: medicion_60.csv
Prueba/prueba/: Lectura.py
