[tool.poetry]
name = "prueba"
version = "0.1.0"
description = ""
authors = ["Brian Journeyt Rodriguez Vivas <110246636+brianrodriguezvivas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
